updating module info