@@ -33,42 +33,8 @@ Please refer to the documentation to learn more about various GUI features.
 
 ## Making this a modular app
 
-Currently there seems to be no way around this issue
-class org.controlsfx.control.textfield.AutoCompletionBinding (in module org.controlsfx.controls) cannot access class com.sun.javafx.event.EventHandlerManager (in module javafx.base) because module javafx.base does not export com.sun.javafx.event to module org.controlsfx.controls
-class org.controlsfx.control.textfield.AutoCompletionBinding (in module org.controlsfx.controls) cannot access class com.sun.javafx.event.EventHandlerManager (in module javafx.base) because module javafx.base does not export com.sun.javafx.event to module org.controlsfx.controls
-at org.controlsfx.controls/org.controlsfx.control.textfield.AutoCompletionBinding.<init>(AutoCompletionBinding.java:538)
 
-```bazaar
-module org.monarchinitiative.fenominal.gui {
-    requires spring.beans;
-    requires spring.context;
-    requires javafx.graphics;
-    requires javafx.controls;
-    requires javafx.fxml;
-    requires javafx.web;
-    requires java.sql;
-    requires org.monarchinitiative.phenol.core;
-    requires org.monarchinitiative.phenol.io;
-    requires org.slf4j;
-    requires org.monarchinitiative.fenominal.core;
-    requires jdk.jsobject;
-    requires com.google.protobuf;
-    requires com.google.protobuf.util;
-    requires org.phenopackets.schema;
-    requires org.phenopackets.phenopackettools.builder;
-    requires json.simple;
-    requires spring.boot.autoconfigure;
-    requires org.controlsfx.controls;
-    requires spring.boot;
-    requires spring.core;
-
-    exports org.monarchinitiative.fenominal.gui to javafx.graphics, spring.beans, spring.context;
-    opens org.monarchinitiative.fenominal.gui to spring.core;
-    opens org.monarchinitiative.fenominal.gui.config to spring.core;
-    exports org.monarchinitiative.fenominal.gui.config to spring.beans, spring.context;
-    exports org.monarchinitiative.fenominal.gui.controller to spring.beans;
-    opens org.monarchinitiative.fenominal.gui.controller to spring.core, javafx.fxml;
-    opens org.monarchinitiative.fenominal.gui.hpotextminingwidget to javafx.fxml;
-}
+Note that the following needs to be added to the VM options in IntelliJ:
+```agsl
+--add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
 ```
-
